--- a/index.html
+++ b/index.html
@@ -25,19 +25,23 @@
     </nav>
     </header>
     <article>
-        <img src="../portfolio/assets/images/selfie.jpg" alt="Picture of Me" width="370" height="460">
+        <img src="../portfolio/assets/images/selfie.jpg" alt="Picture of Me" width="375" height="460">
         <h2 id="aboutMe">About Me</h2>
         <p>My name is William Rivero. I am currently studying computer programming. I have decided to enroll in an online coding bootcamp in order to dive into this field as quickly and efficiently as possible. Some of my hobbies and interests are playing Video Games, spending time with my Wife/family and weight lifting. I am a very fast learner and have the passion to succeed in any field I choose. My hope is to find employment immediately after graduating from this course.</p>
     </article>
 
     <section>
         <h2 id="work"> Work</h2>
-        <p>I have only started this program a few weeks ago and still don't have much work to show.</p>
-
+        <a href="https://williamnrivero.github.io/run-buddy/">
+            <div class="container">
+            <img src="../portfolio/assets/images/hero-bg.jpg" alt="run-buddy-logo" width="500" height="200">
+            <div class="bottom-right">Run-Buddy</div>
+            </div>
+        </a>
     </section>
+
     <section>
         <h2 id="contactMe">Contact Me</h2>
-        <p>Mailing Address: 80 E 400 N Apt B Centerville, UT 84014</p>
         <p>Email: williamnrivero@gmail.com</p>
         <p>Phone Number: 385-232-0583</p>
     </section>
