--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </header>
     <article>
         <img src="../portfolio/assets/images/selfie.jpg" alt="Picture of Me" width="375" height="460">
+        <img src="../portfolio/assets/images/bootcamp.jpg" alt="bootcamp image" width="920" height="460">
         <h2 id="aboutMe">About Me</h2>
         <p>My name is William Rivero. I am currently studying computer programming. I have decided to enroll in an online coding bootcamp in order to dive into this field as quickly and efficiently as possible. Some of my hobbies and interests are playing Video Games, spending time with my Wife/family and weight lifting. I am a very fast learner and have the passion to succeed in any field I choose. My hope is to find employment immediately after graduating from this course.</p>
     </article>
