attempted to add media query

--- a/index.html
+++ b/index.html
@@ -43,11 +43,8 @@
 
     <section>
         <h2 id="contactMe">Contact Me</h2>
-        <p>Email: williamnrivero@gmail.com</p>
-        <p>Phone Number: 385-232-0583</p>
+        <p>Email: williamnrivero@gmail.com<br>Phone Number: 385-232-0583</br></p>
     </section>
   
-
-    
 </body>
 </html>
